--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "travelsite",
   "version": "1.0.0",
   "dependencies": {
+    "cosmiconfig": "^7.0.0",
     "jquery": "^3.2.1",
     "jquery-smooth-scroll": "^2.2.0",
-    "lazysizes": "^4.0.1",
+    "js-yaml": "^3.14.0",
+    "lazysizes": "^5.2.2",
     "normalize.css": "7.0.0",
     "picturefill": "^3.0.2",
-    "postcss-import": "^11.0.0",
     "postcss-nested": "^2.1.2",
     "postcss-simple-vars": "^4.1.0",
     "waypoints": "^4.0.1"
@@ -19,10 +20,10 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^4.0.0",
-    "gulp-modernizr": "^1.0.0-alpha",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-modernizr": "^4.0.1",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^8.1.0",
@@ -32,11 +33,11 @@
     "gulp-usemin": "^0.3.28",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^1.0.0",
-    "postcss-import": "11.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^2.1.2",
     "postcss-simple-vars": "^4.1.0",
-    "webpack": "^3.8.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.0.4"
   }
 }
